# glom

./: .cproject  .cvsignore  .gitattributes  .gitignore  .project  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile_glom.am  Makefile_libegg.am  Makefile_libglom.am  Makefile_tests.am  NEWS  README  TODO  acinclude.m4  aclocal.m4  add1000.patch  autogen.sh  avahi_gtk_undisable_deprecated.patch  cmake-config.h.in  config.h.in  configure.ac  configure.in  glom.am  glom.appdata.xml.in  glom.applications  glom.desktop  glom.desktop.in.in  glom.doap  glom.kdevprj  glom.keys  glom.lsm  glom.mime  glom.service.in  glom.xml  libegg.am  libglom.am  manifest.json  (+2 more)
docs/libglom_reference/: .gitignore  Doxyfile.in  Makefile.am
docs/pyglom_reference/: .gitignore  Makefile.am  conf.py.in  index.rst.in
docs/user-guide/: .gitignore  ChangeLog  Makefile.am  glom-C.omf.in  glom.omf.in
glom/: .gitignore  Makefile.am  application.cc  application.h  appstate.cc  appstate.h  appwindow.cc  appwindow.h  base_db.cc  base_db.h  base_db_table.cc  base_db_table.h  base_db_table_data.cc  base_db_table_data.h  base_db_table_data_readonly.cc  base_db_table_data_readonly.h  box_db.cc  box_db.h  box_db_table.cc  box_db_table.h  box_reports.cc  box_reports.h  box_withbuttons.cc  box_withbuttons.h  combobox_fields.cc  combobox_fields.h  combobox_relationship.cc  combobox_relationship.h  connectionpool.cc  connectionpool.h  dialog_connection.cc  dialog_connection.h  dialog_database_preferences.cc  dialog_database_preferences.h  dialog_existing_or_new.cc  dialog_existing_or_new.h  dialog_glom.cc  dialog_glom.h  dialog_import_csv.cc  dialog_import_csv.h  (+68 more)
glom/bakery/: App.cc  App.h  AppInstanceManager.cc  AppInstanceManager.h  App_Gtk.cc  App_Gtk.h  App_WithDoc.cc  App_WithDoc.h  App_WithDoc_Gtk.cc  App_WithDoc_Gtk.h  Dialog_OfferSave.cc  Dialog_OfferSave.h  GtkDialogs.cc  GtkDialogs.h  Makefile.am  app.cc  app.h  app_withdoc.cc  app_withdoc.h  app_withdoc_gtk.cc  app_withdoc_gtk.h  appwindow.cc  appwindow.h  appwindow_withdoc.cc  appwindow_withdoc.h  appwindow_withdoc_gtk.cc  appwindow_withdoc_gtk.h  busy_cursor.cc  busy_cursor.h  dialog_offersave.cc  dialog_offersave.h
glom/data_structure/: Makefile.am  field.cc  field.h  fieldtype.cc  fieldtype.h  fieldtypes.cc  fieldtypes.h  glomconversions.cc  glomconversions.h  groupinfo.cc  groupinfo.h  iso_codes.cc  iso_codes.h  layoutgroup.cc  layoutgroup.h  layoutitem.cc  layoutitem.h  numeric_format.cc  numeric_format.h  privileges.cc  relationship.cc  relationship.h  report.cc  report.h  system_prefs.cc  system_prefs.h  tableinfo.cc  tableinfo.h  translatable_item.cc  translatable_item.h
glom/document/: Makefile.am  document_glom.cc  document_glom.h
glom/import_csv/: csv_parser.cc  csv_parser.h  dialog_import_csv.cc  dialog_import_csv.h  dialog_import_csv_progress.cc  dialog_import_csv_progress.h  file_encodings.cc  file_encodings.h
glom/layout_item_dialogs/: Makefile.am  box_formatting.cc  box_formatting.h  combo_summarytype.cc  combo_summarytype.h  comboentry_borderwidth.cc  comboentry_borderwidth.h  dialog_buttonscript.cc  dialog_buttonscript.h  dialog_field_layout.cc  dialog_field_layout.h  dialog_field_summary.cc  dialog_field_summary.h  dialog_group_by.cc  dialog_group_by.h  dialog_groupby_secondaryfields.cc  dialog_groupby_secondaryfields.h  dialog_groupby_sortfields.cc  dialog_groupby_sortfields.h  dialog_imageobject.cc  dialog_imageobject.h  dialog_notebook.cc  dialog_notebook.h  dialog_textobject.cc  dialog_textobject.h
glom/libglom/: .gitignore  Makefile.am  algorithms_utils.h  appstate.cc  appstate.h  avahi_publisher.cc  avahi_publisher.h  busy_cursor.cc  busy_cursor.h  calcinprogress.cc  calcinprogress.h  cmake-libglom_config.h.in  connectionpool.cc  connectionpool.h  db_utils.cc  db_utils.h  db_utils_export.cc  db_utils_export.h  dialog_progress_creating.cc  dialog_progress_creating.h  example_document_load.cc  file_utils.cc  file_utils.h  filelist.am  glade_utils.h  glom-1.0.pc.in  glom-1.16.pc.in  glom.pc.in  glom_postgres.cc  glom_postgres.h  gst-package.c  gst-package.h  init.cc  init.h  layout_utils.cc  layout_utils.h  libglom_config.h.in  privs.cc  privs.h  report_builder.cc  (+23 more)
glom/mode_data/: Makefile.am  box_data.cc  box_data.h  box_data_calendar_related.cc  box_data_calendar_related.h  box_data_details.cc  box_data_details.h  box_data_list.cc  box_data_list.h  box_data_list_related.cc  box_data_list_related.h  box_data_manyrecords.cc  box_data_manyrecords.h  box_data_portal.cc  box_data_portal.h  buttonglom.cc  buttonglom.h  calcinprogress.cc  calcinprogress.h  dialog_choose_field.cc  dialog_choose_field.h  dialog_choose_relationship.cc  dialog_choose_relationship.h  dialog_field_layout.cc  dialog_field_layout.h  dialog_layout.cc  dialog_layout.h  dialog_layout_calendar_related.cc  dialog_layout_calendar_related.h  dialog_layout_details.cc  dialog_layout_details.h  dialog_layout_export.cc  dialog_layout_export.h  dialog_layout_list.cc  dialog_layout_list.h  dialog_layout_list_related.cc  dialog_layout_list_related.h  flowtablewithfields.cc  flowtablewithfields.h  glom_db_treemodel.cc  (+8 more)
glom/mode_design/: Makefile.am  box_db_table_relationships.cc  box_db_table_relationships.h  comboentry_currency.cc  comboentry_currency.h  dialog_add_related_table.cc  dialog_add_related_table.h  dialog_buttonscript.cc  dialog_database_preferences.cc  dialog_database_preferences.h  dialog_design.cc  dialog_design.h  dialog_fields.cc  dialog_fields.h  dialog_initial_password.cc  dialog_initial_password.h  dialog_relationships.cc  dialog_relationships.h  dialog_script_library.cc  dialog_script_library.h  dialog_textobject.cc  dialog_user.cc  dialog_user.h  dialog_users_list.cc  dialog_users_list.h  iso_codes.cc  iso_codes.h  notebook_design.cc  notebook_design.h
glom/mode_find/: Makefile.am  box_data_details_find.cc  box_data_details_find.h  box_data_list_find.cc  box_data_list_find.h  (+2 more)
regression_tests/: .gitignore  Makefile.am  test_load_python_library.cc  test_parsing_time.cc  test_signal_reemit.cc  test_treemodel_dynamic_cast.cc
(+1206 files in other folders)
